# zheldorremmash

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  runserver.py
app/: app.py  creating_tables.py  facilities.py  forms.py  graphs.py  manage.py  models.py  table_form.py  user.py
app/blueprints/: __init__.py  auth.py  base.py  dashboard.py  data.py  profile.py
app/templates/: Dashboard.html  overpage.html
app/templates/auth/: signin.html  signup.html
app/templates/base/: index.html
app/templates/data/: ActionPlanImplementation.html  TableForm.html  TargetIndicator.html  tables.html  Адаптация регламентов.html  Внедрение SMED на заводе.html  Внедрение СВМ.html  Внедрение СОКов на заводе.html  Внедрение ТРМ на заводе.html  Достижение целевого показателя по ДК ТОС.html  Исполнение плана мероприятий по ДК ТОС.html  Обмен опытом.html  ПСЗ, млн. руб..html  Проведение обучения.html  Составление КПСЦ.html  кайдзен деятельность (ППУ), шт..html  уровень внедрения инструмента 5С.html
app/templates/profile/: change_password.html  profile.html  users_list.html
backend/: .env  ParseExcel.ipynb  Untitled-1.ipynb  app.py  docker-app.py  main.py  result.json  test.json
backend/database/: __init__.py  audits.py  facilities.py  tests.py  users.py
backend/models/: audits.py  auth.py  facilities.py  tests.py  users.py
backend/routes/: __init__.py  audits.py  auth.py  facilities.py  tests.py  users.py
backend/utils/: email_validator.py  password_hasher.py  pydanctic_utils.py  pydantic_utils.py  session_validator.py
