[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Fire Strike <dimkov2003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
python-dotenv = "^1.0.1"
flask-bcrypt = "^1.0.1"
flask-migrate = "^4.0.7"
flask-wtf = "^1.2.1"
psycopg2 = "^2.9.9"
gevent = "^24.2.1"
pandas = "^2.2.2"
plotly = "^5.23.0"
flask-caching = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
