[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
motor = {extras = ["srv"], version = "^3.7.0"}
httpx = "^0.28.1"
uvicorn = "^0.34.0"
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^2.10.6"}
bcrypt = "4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
