[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "fastapi>=0.115.8,<0.116",
    "motor[srv]>=3.7.0,<4",
    "uvicorn>=0.34.0,<0.35",
    "passlib>=1.7.4,<2",
    "pydantic[email]>=2.10.6,<3",
    "bcrypt==4.0.1",
    "python-dotenv>=1.1.0",
    "beanie[srv]>=1.29.0",
    "apscheduler>=3.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
